--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Whop Retry - Dashboard</title>
+    <title>Whop Recovery - Recupera tus pagos perdidos</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CWBET495M1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-CWBET495M1');
+    </script>
   </head>
   <body>
     <div id="root"></div>
