feat: Migración completa SendGrid → MailerSend - db.js + migration SQL + toda la documentación actualizada

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,7 +145,7 @@
           "name": "How long does it take to set up?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Setup takes less than 60 seconds. Simply connect your Whop API key, configure SendGrid for emails, and you're ready to start recovering payments automatically."
+            "text": "Setup takes less than 60 seconds. Simply connect your Whop API key, configure MailerSend for emails, and you're ready to start recovering payments automatically."
           }
         },
         {
